tests/baselines/reference/jsxAttributeWithoutExpressionReact.errors.txt
jsxAttributeWithoutExpressionReact.tsx(2,2): error TS2304: Cannot find name 'View'.
jsxAttributeWithoutExpressionReact.tsx(3,6): error TS2304: Cannot find name 'ListView'.
jsxAttributeWithoutExpressionReact.tsx(4,10): error TS2304: Cannot find name 'RefreshControl'.
jsxAttributeWithoutExpressionReact.tsx(4,35): error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
jsxAttributeWithoutExpressionReact.tsx(5,24): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
jsxAttributeWithoutExpressionReact.tsx(5,44): error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
jsxAttributeWithoutExpressionReact.tsx(6,7): error TS2304: Cannot find name 'ListView'.
jsxAttributeWithoutExpressionReact.tsx(7,3): error TS2304: Cannot find name 'View'.


==== jsxAttributeWithoutExpressionReact.tsx (8 errors) ====
    declare var React: any;
    <View>
     ~~~~
!!! error TS2304: Cannot find name 'View'.
        <ListView refreshControl={
         ~~~~~~~~
!!! error TS2304: Cannot find name 'ListView'.
            <RefreshControl onRefresh={} refreshing={} />
             ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'RefreshControl'.
                                      ~~
!!! error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
        } dataSource={this.state.ds} renderRow={}>
                           ~~~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
                                               ~~
!!! error TS17000: JSX attributes must only be assigned a non-empty 'expression'.
        </ListView>
          ~~~~~~~~
!!! error TS2304: Cannot find name 'ListView'.
    </View>
      ~~~~
!!! error TS2304: Cannot find name 'View'.
    